fixed the homepage and the navbar FOREVER

--- a/app/assets/stylesheets/components/_background.scss
+++ b/app/assets/stylesheets/components/_background.scss
@@ -1,6 +1,7 @@
 .homepage-navbar {
-  background-image: url(debashisv2.jpg);
-  background-size: cover;
+  position: absolute;
+  width: 100%;
+  background: transparent;
 
   #padding-top-navbar-container {
     padding-top: 16px;
