--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -18,5 +18,5 @@
 @import "map";
 @import "exhibition-card";
 @import "to_do_card";
-@import "collab-card";
+@import "collab-list";
 @import "footer";
