--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -17,6 +17,7 @@
     }
 
     h3 {
+      text-align: center;
       letter-spacing: 0.075em;
       text-shadow: 10px 10px 40px rgba(0,0,0,0.7),
       -10px 10px 40px rgba(0,0,0,0.7),
