--- a/app/views/collabs/show.html.erb
+++ b/app/views/collabs/show.html.erb
@@ -24,26 +24,25 @@
 
   <% if @accepted_users %>
 
-    <div class="collab-accepted-users">
-      <div class="collab-card-members-todo">
-        <div class="collab-card-info">
-          <div class="collab-edit-delete-btn">
-            <%= link_to 'Edit collab', edit_collab_path(@collab), class: "btn btn-outline-primary" %>
-            <%= link_to "Delete collab", collab_path(@collab), method: :delete, data: { confirm: "Are you sure?", disable_with: "Processing..." }, class: "btn btn-outline-danger" %>
-          </div>
-          <hr>
-          <h4 style="margin-bottom:8px"> Members: </h4>
-          <% @accepted_collab.each do |collab| %>
-            <div class="collab-members">
-              <p style="margin-bottom:0"> <%= collab.user.username %> </p>
-              <% if @collab.users.include?(current_user) %>
-              <%= link_to "Remove", user_collab_relationship_path(@collab.user_collab_relationships.find {|uc| uc.user == collab.user }), method: :delete, data: {confirm: "Remove this artist from the collab?"}, class: "btn btn-outline-warning" %>
-              <% end %>
-            </div>
-          <% end %>
+    <div class="collab-card-members-todo">
+      <div class="collab-card-info">
+        <div class="collab-edit-delete-btn">
+          <%= link_to 'Edit collab', edit_collab_path(@collab), class: "btn btn-outline-primary" %>
+          <%= link_to "Delete collab", collab_path(@collab), method: :delete, data: { confirm: "Are you sure?", disable_with: "Processing..." }, class: "btn btn-outline-danger" %>
         </div>
+        <hr>
+        <h4 style="margin-bottom:8px"> Members: </h4>
+        <% @accepted_collab.each do |collab| %>
+          <div class="collab-members">
+            <p style="margin-bottom:0"> <%= collab.user.username %> </p>
+            <% if @collab.users.include?(current_user) %>
+            <%= link_to "Remove", user_collab_relationship_path(@collab.user_collab_relationships.find {|uc| uc.user == collab.user }), method: :delete, data: {confirm: "Remove this artist from the collab?"}, class: "btn btn-outline-warning" %>
+            <% end %>
+          </div>
+        <% end %>
+      </div>
 
-        <div class="vertical-divider" style="border-left:1px solid black;"></div>
+      <div class="vertical-divider" style="border-left:1px solid black;"></div>
 
       <div class="collab-to-do-container">
         <% @collab.to_dos.each do |to_do| %>
@@ -73,13 +72,12 @@
         <% end %>
       </div>
 
-      </div>
-
-      <div class="container-btn-collab">
-        <%= link_to "Add a member", new_collab_user_collab_relationship_path(@collab), class: "btn btn-outline-primary" %>
-        <%= link_to "Add an exhibition", new_collab_exhibition_path(@collab, @exhibition), class: "btn btn-outline-primary", data: { toggle: 'tooltip', placement: 'top', title: 'Show the results of your collaboration' }  %>
-        <%= link_to "Add a brainstorming", new_collab_to_do_path(@collab), class: "btn btn-outline-primary", data: { toggle: 'tooltip', placement: 'top', title: 'Share a list of ideas' }  %>
-      </div>
+    </div>
+    <br>
+    <div class="container-btn-collab">
+      <%= link_to "Add a member", new_collab_user_collab_relationship_path(@collab), class: "btn btn-outline-primary" %>
+      <%= link_to "Add an exhibition", new_collab_exhibition_path(@collab, @exhibition), class: "btn btn-outline-primary", data: { toggle: 'tooltip', placement: 'top', title: 'Show the results of your collaboration' }  %>
+      <%= link_to "Add a brainstorming", new_collab_to_do_path(@collab), class: "btn btn-outline-primary", data: { toggle: 'tooltip', placement: 'top', title: 'Share a list of ideas' }  %>
     </div>
 
   <% elsif @pending_users %>
@@ -96,7 +94,7 @@
     <h2>You can't see more information because you're not a member.</h2>
     <br>
     <div class="btn-collab-card">
-      <%= link_to "Ask to join this collab", user_collab_relationships_path(user_collab_relationship: {collab_id: @collab.id, user_id: current_user.id, status: "pending" }), method: :post , class: 'btn btn-outline-primary' %>
+      <%= link_to "Join this collab", user_collab_relationships_path(user_collab_relationship: {collab_id: @collab.id, user_id: current_user.id, status: "pending" }), method: :post , class: 'btn btn-outline-primary' %>
     </div>
   </div>
 
