--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,8 +2,9 @@
   <div class="homepage-title">
     <h1>ARTSOUILLE</h1>
     <br>
-    <h3>Find another artist, collab, co-create.</h3>
-    <h3>Because Art is too important not to share.</h3>
+    <h3>Find another artist, collab, co-create.
+    <br>
+    Because Art is too important not to share.</h3>
     <br>
     <br>
     <% if user_signed_in? %>
