--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -55,7 +55,7 @@
   <br>
   <br>
   <br>
-  <hr style="margin: 0 200px;" class="divider">
+  <hr class="divider-profile-portfolio">
   <br>
   <br>
   <br>
