--- a/app/assets/stylesheets/components/_collab-list.scss
+++ b/app/assets/stylesheets/components/_collab-list.scss
@@ -18,53 +18,6 @@
   margin-bottom: 0;
 }
 
-.container-collab-cards {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 10px;
-  grid-row-gap: 10px;
-
-  img {
-    width: 300px;
-    max-height: 400px;
-  }
-
-  .collab-card {
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-    height: auto;
-    width: 300px;
-  }
-
-  .collab-card-infos {
-    position: absolute;
-    flex-direction: column;
-    text-align: left;
-    position: relative;
-    margin-bottom: 20px;
-
-    h3 {
-      margin-top: 8px;
-    }
-
-    h3 a {
-      text-decoration: none;
-      color: black;
-    }
-
-    h4 {
-      text-align: justify;
-    }
-
-    .btn-outline-primary {
-      font-family: "Novar";
-      width: 65%;
-      margin-top: 8px;
-    }
-  }
-}
-
 .container-collab-image {
 
   img {
@@ -96,14 +49,7 @@
       justify-content: space-between;
       margin-top: 8px;
 
-
-      .btn-outline-danger {
-        width: 40%;
-        padding: 4px 10px;
-        margin-bottom: 0;
-      }
-
-      .btn-outline-primary {
+      .btn-outline-danger, .btn-outline-primary  {
         width: 40%;
         padding: 4px 10px;
         margin-bottom: 0;
@@ -126,15 +72,9 @@
   }
 }
 
-.collab-accepted-users {
-  display: flex;
-  flex-direction: column;
-  align-items: space-around;
-
-  .container-btn-collab {
-    margin-top: 30px;
-    padding: 4px 10px;
-  }
+.container-btn-collab {
+  margin-top: 30px;
+  padding: 4px 10px;
 }
 
 .collab-divider {
@@ -201,15 +141,11 @@
     }
 
     .btn-collab-card {
-      width: 20%;
+      width: 10%;
       display: flex;
       justify-content: center;
 
-      .btn-outline-primary {
-        margin-bottom: 0;
-      }
-
-      .btn-outline-success {
+      .btn-outline-primary, .btn-outline-success {
         margin-bottom: 0;
       }
     }
@@ -234,11 +170,6 @@
     h4 {
       margin-bottom: 0;
       width: 250px;
-
-      a {
-        color: inherit;
-        text-decoration: none;
-      }
     }
 
     p {
@@ -254,7 +185,6 @@
     }
   }
 }
-
 
 .collab-pending-users {
 
