--- a/app/assets/stylesheets/components/_media-320px.scss
+++ b/app/assets/stylesheets/components/_media-320px.scss
@@ -1,55 +1,120 @@
 @media (min-width: 320px) and (max-width: 480px) {
 
-  .background_yellow {
-    padding-top: 10px;
+  // General Media Queries
+
+  #no-result {
+    font-size: 20px;
   }
 
-  .dropdown {
-    position: absolute;
+  #row-form {
+    margin: 0;
+  }
 
-    img {
-      position: absolute;
-      right: -138px;
-      top: 5px;
-    }
+  p {
+    font-size: 16px;
+  }
+
+  h3 {
+    font-size: 24px;
+  }
+
+  h4 {
+    font-size: 18px;
+  }
+
+  .btn-arrow-left {
+    margin-left: 25px;
+    width: 200px;
+    font-size: 16px;
+  }
+
+  .btn-outline-primary, .btn-outline-warning, .btn-outline-success, .btn-outline-danger {
+    font-size: 14px;
+    padding: 4px 8px;
+  }
+
+  // Media Queries for Navbar
+
+  .dropdown {
+    position: relative;
+    right: -5px;
+    top: -1px;
 
     .dropdown-menu {
       padding: 0px 0px 0px 6px;
-      height: 155px;
+      height: 133px;
       font-size: 14px;
       line-height: 0.4rem;
       position: absolute;
-      right: -132px;
-      top: 70px;
+      right: 5px;
+      top: 58px;
     }
   }
 
   .navbar-lewagon {
 
+    .login {
+      margin-right: 0;
+      position: relative;
+      right: -5px;
+    }
+
     .mr-auto {
       display: flex;
       align-items: center;
+
+      .form-group {
+        margin: 0;
+      }
     }
     .navbar-nav {
+      flex-direction: row;
+
+      .nav-link {
+        margin-right: 8px;
+      }
 
       .form-inline {
+        margin: 0;
 
         .form-control {
           height: 40px;
-          position: relative;
-          top: 8px;
-          right: 1px;
           max-width: 175px;
         }
       }
     }
   }
 
-  .btn-arrow-left {
-    margin-left: 25px;
-    width: 150px;
-    font-size: 14px;
+  // Media Queries for Homepage
+
+  .banner {
+    background-image: url(debashis-vertical.jpg) !important;
+    background-position: center;
+    background-size: cover;
+
+    h1 {
+      font-size: 40px;
+    }
+
+    h3 {
+      text-align: center;
+      font-size: 18px;
+      text-shadow: 0px 0px 6px rgba(0,0,0,0.7) !important;
+    }
   }
+
+  // Media Queries for Artist Index
+
+  .container-artist-cards {
+    display: flex;
+    flex-direction: column;
+
+    .artist-card-infos {
+      margin-bottom: 0;
+    }
+  }
+
+  // Media Queries for Artist Show
 
   .profile-card {
     flex-direction: column;
@@ -57,225 +122,147 @@
     img {
       display: block;
       margin: auto;
-      max-width: 250px;
+      width: 300px;
     }
 
     .btn-profile {
       margin: auto;
       flex-direction: row;
-      width: 250px;
+      width: 300px;
+    }
+  }
 
-      .btn-outline-primary {
-        padding: 4px 10px;
-        font-size:14px;
+  .profile-card-items {
+    width: 300px;
+    margin: auto;
+
+    .profile-card-infos {
+      width: 300px;
+      margin-top: 20px;
+    }
+  }
+
+  .divider-profile-portfolio {
+    margin: 0 25px;
+  }
+
+  // Media Queries for Work of Art Index
+
+  .container-work-of-art-cards {
+    display: flex;
+    flex-direction: column;
+
+    .work-of-art-card-infos {
+
+      .favorite-heart a {
+        font-size: 14px;
+        right: 12px;
+        top: -35px;
       }
     }
   }
 
-  .profile-card-infos {
-    display: block;
-    margin: auto;
-    max-width: 250px;
-    margin-top: 20px;
+  // Media Queries for Work of Art Show
 
-    p {
-      font-size: 13px;
-    }
-  }
-
-  #no-result {
-    font-size: 20px;
-  }
-  .artist-card {
+  .woa-card-show {
     flex-direction: column;
-    width: 250px;
-    height: 450px;
-    margin-bottom: 20px;
+    margin: auto;
 
-    img {
+    .artwork-show img {
       display: block;
       margin: auto;
-      width: 250px;
-    }
-
-    .artist-card-infos {
-      margin-bottom: 0;
-
-      p {
-        font-size: 13px;
-      }
-    }
-  }
-
-  .work-of-art-card {
-    width: 250px;
-    height: 450px;
-
-    img {
-      width: 250px;
+      max-width: 300px;
     }
 
     .work-of-art-card-infos {
-      width: 250px;
-
-      p {
-        font-size: 13px;
-      }
-
-      .favorite-heart a {
-        font-size: 12px;
-        right: 15px;
-        top: -35px;
-      }
-
-      .btn-outline-primary, .btn-outline-warning {
-        font-size: 14px;
-        padding: 4px 10px;
-      }
+      display: block;
+      margin: auto;
+      width: 300px;
+      margin-top: 20px;
     }
   }
 
+  .no-artwork {
+    display: block;
+    margin: 0 50px;
+
+    a {
+      padding: 0;
+    }
+  }
+
+  // Media Queries for Collab Index
+
   .page-info {
     margin: auto;
-    max-width: 250px;
-
-    p {
-      font-size: 14px;
-    }
+    max-width: 300px;
 
     .btn-page-info {
-      width: 250px;
+      width: 300px;
 
       .btn-outline-primary {
-        font-size: 14px;
         width: 40%;
       }
     }
   }
 
-  .collab-card {
-    width: 250px;
-    height: 350px;
-
-    img {
-      width: 250px;
-    }
-
-    .collab-card-infos {
-      width: 250px;
-
-      h3 {
-        font-size: 16px;
-      }
-
-      h4 {
-        font-size: 14px;
-      }
-
-      p {
-        font-size: 13px;
-      }
-
-      .btn-collab-card {
-        width: 250px;
-
-        .btn-outline-primary {
-          font-size: 14px;
-          width: 50%;
-        }
-      }
-    }
-  }
-
-  .container {
-
-    .exhibition-headers {
-      margin: auto;
-
-      h2 {
-        font-size: 20px;
-      }
-    }
-  }
-
-  .exhibition-list-infos {
+  .collab-list-infos {
 
     h3 {
-      max-width: 80px;
-      font-size: 16px;
+      width: 100px !important;
+      font-size: 20px;
     }
 
     h4 {
-      max-width: 90px;
-      font-size: 14px;
+      width: 100px !important;
+      font-size: 16px;
     }
 
-    .btn-exhibition-info {
-
-      .btn-outline-primary {
-        padding: 6px;
-        width: 40px;
-        font-size: 13px;
-      }
+    .btn-collab-card {
+      width: 60px !important;
     }
   }
 
-  .exhibition-card {
-    flex-direction: column;
-
-    img {
-      display: block;
-      margin: auto;
-      width: 250px;
-    }
-
-    .exhibition-card-items {
-      margin-top: 20px;
-
-      .exhibition-card-infos {
-        display: block;
-        margin: auto;
-        max-width: 250px;
-      }
-
-      .btn-work-of-art {
-        justify-content: space-evenly;
-      }
-    }
-  }
-
-  .map-index {
-    margin: auto;
-    width: 350px;
-
-    .mapboxgl-ctrl {
-      width: 200px;
-      margin: 10px
-    }
-
-    .mapboxgl-ctrl {
-      width: 30px;
-    }
-  }
-
-  .collab-list-infos {
-    .btn-collab-view {
-     .btn-outline-primary {
-      padding: 0;
-      }
-    }
-  }
+  // Media Queries for Collab Show
 
   .container-collab-image {
 
     img {
       display: block;
       margin: auto;
-      width: 250px;
+      max-width: 300px;
+    }
+
+    h3, h4 {
+      margin-bottom: 0;
+    }
+  }
+
+  .collab-divider {
+    margin: 0 25px !important;
+  }
+
+  .collab-pending-users {
+
+    h2 {
+      margin: auto;
+      font-size: 20px;
+      width: 300px;
+    }
+
+    .btn-collab-card {
+      width: 40% !important;
+
+      .btn-outline-primary {
+        margin: 0;
+      }
     }
   }
 
   .collab-card-members-todo {
+    width: 300px !important;
+    margin: auto;
+    flex-direction: column !important;
 
     h2 {
       font-size: 20px;
@@ -294,13 +281,30 @@
     }
 
     .collab-card-info {
+      width: 300px !important;
+      margin-bottom: 24px;
 
       .collab-members {
         margin-bottom: 0;
 
         .btn-outline-warning {
-          width: 40%;
-          font-size: 13px;
+          width: 40% !important;
+        }
+      }
+    }
+
+    .collab-to-do-container {
+      width: 300px;
+
+      .card-to-do {
+        width: 300px;
+
+        .btn-outline-danger {
+          width: 40% !important;
+        }
+
+        .btn-outline-primary {
+          margin-bottom: 8px;
         }
       }
     }
@@ -311,9 +315,153 @@
     justify-content: space-around;
 
     .btn-outline-primary {
-      padding: 4px 8px;
       width: 30%;
-      font-size: 14px;
+    }
+  }
+
+  // Media Queries for My Collabs
+
+  .collab-active-and-requests {
+    width: 250px;
+    margin: auto;
+
+      h2 {
+        font-size: 24px;
+      }
+  }
+
+  .my-collabs {
+
+    .collab-list-infos {
+      justify-content: space-between !important;
+
+      h3 {
+        width: 100px !important;
+        font-size: 16px;
+      }
+
+      h4, p {
+        width: 100px !important;
+      }
+
+      .btn-collab-view {
+        width: 100px !important;
+
+        .btn-outline-primary {
+          width: 70%;
+        }
+      }
+    }
+
+    .collab-request-infos {
+      justify-content: space-between !important;
+
+      h3 {
+        width: 80px !important;
+        font-size: 16px;
+      }
+
+      h4 {
+        width: 80px !important;
+        font-size: 16px;
+      }
+
+      p {
+        width: 80px !important;
+        padding: 0 !important;
+      }
+
+      .btn-collab-validation {
+        width: 100px !important;
+
+        .btn-outline-success, .btn-outline-warning {
+          width: 70%;
+        }
+      }
+    }
+  }
+
+  // Media Queries for Exhibition Index
+
+  .container {
+
+    .exhibition-headers {
+
+      p {
+        font-size: 14px;
+      }
+
+      .name-tab, .description-tab, .type-tab, .location-tab  {
+        width: 75px !important;
+      }
+
+      .info-tab {
+        width: 40px;
+      }
+    }
+
+    .exhibition-list-infos {
+
+      h3, h4 {
+        width: 75px !important;
+        font-size: 14px;
+      }
+
+      .btn-exhibition-info {
+
+        .btn-outline-primary {
+          padding: 6px;
+          width: 40px;
+        }
+      }
+    }
+  }
+
+  // Media Queries for Exhibition Show
+
+  .exhibition-card {
+    flex-direction: column;
+
+    img {
+      display: block;
+      margin: auto;
+      width: 300px;
+    }
+
+    .exhibition-card-items {
+      margin-top: 20px;
+
+      .exhibition-card-infos {
+        display: block;
+        margin: auto;
+        max-width: 300px;
+
+        h3, h4, p {
+          margin-bottom: 0 !important;
+        }
+      }
+
+      .btn-work-of-art {
+        width: 300px;
+        margin: auto;
+        margin-top: 8px;
+      }
+    }
+  }
+
+  // Media Queries for Map
+
+  .map-index {
+    margin: auto;
+    width: 350px;
+
+    .mapboxgl-ctrl {
+      width: 200px;
+      margin: 10px
+    }
+
+    .mapboxgl-ctrl {
+      width: 30px;
     }
   }
 }
