--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row">
+  <div class="row" id="row-form">
     <div class="col-xs-12 col-sm-4 col-sm-offset-4">
       <div class="form-login gradient-border">
       <h2>Resend unlock instructions</h2>
