--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,8 +2,8 @@
   <br>
   <% if @users.empty? %>
   <br>
-  <div class="container-artist-cards">
-    <h2 id="no-result"> Sorry, we didn't find anything for "<%= params[:search][:name] %>" </h2>
+  <div class="no-result">
+    <h2> Sorry, we didn't find anything for "<%= params[:search][:name] %>" </h2>
   </div>
   <% end %>
   <div class="container-artist-cards">
