--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,19 +9,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item active <%= 'active-tab' if current_page?(root_path) %>">
-          <%= link_to "Home", root_path, class: "nav-link" %>
+          <%= link_to "Home", root_path, class: "nav-link navbar-tab" %>
         </li>
         <li class="nav-item active <%= 'active-tab' if current_page?(users_path) %>">
-          <%= link_to "Artists", users_path, class: "nav-link" %>
+          <%= link_to "Artists", users_path, class: "nav-link navbar-tab" %>
         </li>
         <li class="nav-item active <%= 'active-tab' if current_page?(work_of_arts_path) %>">
-          <%= link_to "Artworks", work_of_arts_path, class: "nav-link" %>
+          <%= link_to "Artworks", work_of_arts_path, class: "nav-link navbar-tab" %>
         </li>
         <li class="nav-item active <%= 'active-tab' if current_page?(collabs_path) %>">
-          <%= link_to "Collabs", collabs_path, class: "nav-link" %>
+          <%= link_to "Collabs", collabs_path, class: "nav-link navbar-tab" %>
         </li>
         <li class="nav-item active <%= 'active-tab' if current_page?(exhibitions_path) %>">
-          <%= link_to "Exhibitions", exhibitions_path, class: "nav-link" %>
+          <%= link_to "Exhibitions", exhibitions_path, class: "nav-link navbar-tab" %>
         </li>
       </ul>
     </div>
