updated responsiveness for high resolution tablets

--- a/app/assets/stylesheets/components/_media-481px.scss
+++ b/app/assets/stylesheets/components/_media-481px.scss
@@ -169,7 +169,7 @@
     .artwork-show img {
       display: block;
       margin: auto;
-      max-width: 300px;
+      width: 300px;
     }
 
     .work-of-art-card-infos {
@@ -229,7 +229,7 @@
     img {
       display: block;
       margin: auto;
-      max-width: 300px;
+      width: 300px;
     }
 
     h3, h4 {
