--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
   <% if @users.empty? %>
   <br>
   <div class="no-result">
-    <h2> Sorry, we didn't find anything for "<%= params[:search][:name] %>" </h2>
+    <h2> Sorry, we didn't find anything for "<%= params[:search][:name] %>". </h2>
   </div>
   <% end %>
   <div class="container-artist-cards">
