--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -29,7 +29,7 @@
     <div>
       <ul class="navbar-nav mr-auto">
               <%= simple_form_for :search, url: users_path, method: "GET", html: { class: 'form-inline' } do |f| %>
-        <%= f.input :name, input_html: {value: "", style: 'width: 300px'}, placeholder: "Find an artist, artwork, exhibition...", label: false %>
+        <%= f.input :name, input_html: {value: "", style: 'width: 300px'}, placeholder: "Find an artist...", html: { class: 'placeholder-small' }, label: false %>
         <%= button_tag(type: 'submit', class: "btn btn-outline-info") do %>
           <i class="fa fa-search"></i>
           <% end %>
