--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,7 +21,7 @@
           <%= link_to "Collabs", collabs_path, class: "nav-link navbar-tab" %>
         </li>
         <li class="nav-item active <%= 'active-tab' if current_page?(exhibitions_path) %>">
-          <%= link_to "Exhibitions", exhibitions_path, class: "nav-link navbar-tab" %>
+          <%= link_to "Exhibitions", exhibitions_path, class: "nav-link navbar-tab", id: "exhibition-tab" %>
         </li>
       </ul>
     </div>
