--- a/app/assets/stylesheets/components/_media-320px.scss
+++ b/app/assets/stylesheets/components/_media-320px.scss
@@ -71,8 +71,12 @@
     .navbar-nav {
       flex-direction: row;
 
+      #exhibition-tab {
+        margin-right: 0;
+      }
+
       .navbar-tab {
-        margin: 0 8px 8px 0;
+        margin: 0 7.2px 8px 0;
       }
 
       .form-inline {
