--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav navbar-nav-tab">
         <li class="nav-item active <%= 'active-tab' if current_page?(root_path) %>">
           <%= link_to "Home", root_path, class: "nav-link navbar-tab" %>
         </li>
