--- a/app/assets/stylesheets/components/_media-320px.scss
+++ b/app/assets/stylesheets/components/_media-320px.scss
@@ -55,7 +55,6 @@
   .navbar-lewagon {
 
     .navbar-collapse {
-      overflow-x: scroll;
 
       .navbar-nav-tab {
         justify-content: space-between;
@@ -79,6 +78,7 @@
     }
 
     .navbar-nav {
+      flex-wrap: wrap;
       flex-direction: row;
 
       #exhibition-tab {
