added meta data from le wagon tutorial.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Artsouille - Collab and Share</title>
-    <meta name="description" content="A platform to help emerging artists find each other, collaborate and co-create.">
+    <title><%= meta_title %></title>
+    <meta name="description" content="<%= meta_description %>">
 
-    <!-- LinkedIn + Facebook Open Graph data -->
-    <meta property='og:title' content='Artsouille - Collab and Share'/>
-    <meta property='og:image' content='<%= image_url('meta-image.jpg') %>'/>
-    <meta property='og:description' content='A platform to help emerging artists find each other, collaborate and co-create. Because Art is too important not to share.'/>
-    <meta property='og:url' content='http://www.artsouille.com'/>
-
+    <!-- Facebook Open Graph data -->
+    <meta property="og:title" content="<%= meta_title %>" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Artsouille" />
-    <meta name="author" content="Artsouille Team">
+    <meta property="og:url" content="<%= request.original_url %>" />
+    <meta property="og:image" content="<%= meta_image %>" />
+    <meta property="og:description" content="<%= meta_description %>" />
+    <meta property="og:site_name" content="<%= meta_title %>" />
 
-    <!-- Twitter Open Graph data -->
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@timdavhen" />
-    <meta name="twitter:title" content="Artsouille - Collab and Share" />
-    <meta name="twitter:description" content="A platform to help emerging artists find each other, collaborate and co-create. Because Art is too important not to share." />
-    <meta name="twitter:image" content="<%= image_url('meta-image.jpg') %>" />
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="<%= DEFAULT_META["twitter_account"] %>">
+    <meta name="twitter:title" content="<%= meta_title %>">
+    <meta name="twitter:description" content="<%= meta_description %>">
+    <meta name="twitter:creator" content="<%= DEFAULT_META["twitter_account"] %>">
+    <meta name="twitter:image:src" content="<%= meta_image %>">
 
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
